corpus/baselines/conformance/jsdoc/checkJsdocTypeTagOnObjectProperty1.errors.txt
0.js(8,14): error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
0.js(8,22): error TS1005: '}' expected.
0.js(9,11): error TS7006: Parameter 'n1' implicitly has an 'any' type.
0.js(16,22): error TS1005: '}' expected.
0.js(17,15): error TS7006: Parameter 'num' implicitly has an 'any' type.


==== 0.js (5 errors) ====
    // @ts-check
    var lol = "hello Lol"
    const obj = {
      /** @type {string|undefined} */
      foo: undefined,
      /** @type {string|undefined} */
      bar: "42",
      /** @type {function(number): number} */
                 ~~~~~~~~
!!! error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
                         ~
!!! error TS1005: '}' expected.
      method1(n1) {
              ~~
!!! error TS7006: Parameter 'n1' implicitly has an 'any' type.
          return n1 + 42;
      },
      /** @type {string} */
      lol,
      /** @type {number} */
      ['b' + 'ar1']: 42,
      /** @type {function(number): number} */
                         ~
!!! error TS1005: '}' expected.
      arrowFunc: (num) => num + 42
                  ~~~
!!! error TS7006: Parameter 'num' implicitly has an 'any' type.
    }
    obj.foo = 'string'
    obj.lol
    obj.bar = undefined;
    var k = obj.method1(0);
    obj.bar1 = "42";
    obj.arrowFunc(0);